--- a/KriddieFolder/Geomorphology_Script/COLM_moreGeomorph_2022-06-07.Rmd
+++ b/KriddieFolder/Geomorphology_Script/COLM_moreGeomorph_2022-06-07.Rmd
@@ -255,6 +255,7 @@ for(i in 1:nrow(df)) {       # for-loop over rows
 ##
 
 df_prediction_3 <- df
+#write.csv(df_prediction_3, here::here("ProcessedData/Colm_XWD.csv"))
 
 ```
 
