--- a/KriddieFolder/Geomorphology_Script/GAVItrib2_moreGeomorph_2022-08-30.Rmd
+++ b/KriddieFolder/Geomorphology_Script/GAVItrib2_moreGeomorph_2022-08-30.Rmd
@@ -258,6 +258,8 @@ for(i in 1:nrow(df)) {       # for-loop over rows
 ##
 
 df_prediction_3 <- df
+#write.csv(df_prediction_3, here::here("ProcessedData/Gavitrib2_XWD.csv"))
+
 
 ```
 
