--- a/KriddieFolder/Geomorphology_Script/GAVItrib3_moreGeomorph_2022-08-30.Rmd
+++ b/KriddieFolder/Geomorphology_Script/GAVItrib3_moreGeomorph_2022-08-30.Rmd
@@ -259,6 +259,8 @@ for(i in 1:nrow(df)) {       # for-loop over rows
 ##
 
 df_prediction_3 <- df
+#write.csv(df_prediction_3, here::here("ProcessedData/Gavitrib3_XWD.csv"))
+
 
 ```
 
