--- a/KriddieFolder/Geomorphology_Script/GAVItrib1_moreGeomorph_2022-08-30.Rmd
+++ b/KriddieFolder/Geomorphology_Script/GAVItrib1_moreGeomorph_2022-08-30.Rmd
@@ -259,6 +259,7 @@ for(i in 1:nrow(df)) {       # for-loop over rows
 ##
 
 df_prediction_3 <- df
+#write.csv(df_prediction_3, here::here("ProcessedData/Gavitrib1_XWD.csv"))
 
 ```
 
