--- a/KriddieFolder/Synoptic_Script/SynopFigures_2024-02-10.Rmd
+++ b/KriddieFolder/Synoptic_Script/SynopFigures_2024-02-10.Rmd
@@ -140,15 +140,16 @@ rivernetwork <- ggplot(df %>%filter(Wetland_3=="Gavilan River Network"), aes(x =
 
 df <- df[order(df$adjusted_ppm),]
 #?get_stadiamap()
-gaviplot <- get_stadiamap(lon_fit,lat_fit, data = df %>%filter(Wetland_3=="Gavilan River Network")%>%drop_na(adjusted_ppm), zoom = 13, size= 10, maptype = "terrain", 
-                   color = log10(adjusted_ppm))+
-  guides(size = "none") +
+
+gaviplot <- qmplot(lon_fit, lat_fit, data = df %>%filter(Wetland_3=="Gavilan River Network")%>%drop_na(adjusted_ppm),size= 6, maptype = "stamen_terrain", color = log10(adjusted_ppm)) +
   scale_color_gradient(low="blue", high="red",
                        breaks=c(log10(300),log10(1000), log10(3000), log10(10000)), labels=c("300","1,000","3,000","10,000"))+
+    guides(size = "none") +
   theme(legend.text=element_text(size=16)) + 
   labs(color=expression(paste(italic('p'),"CO"[2] ," [ppm]"))) +
   theme(legend.title=element_text(size=16), 
     legend.text=element_text(size=14)) 
+
 
 ### c.
 
@@ -318,7 +319,6 @@ figure
 
 #fig 3
 
-
 for < 12.5 hectars, watershed size is not significant, co2 is significant
 r2 = 0.5247, pvalue =2.43e-07
 for > 20 ha, co2 is not significant, but watershed size is. pvalue = 0.00395 r2 = 0.1057
@@ -405,6 +405,8 @@ ggsave("controls_2.png", plot = figure, device = NULL, path = NULL,
 
 
 ```
+
+
 ```{r fig 5, echo=TRUE}
 
 ### bins
@@ -423,25 +425,39 @@ df_bins <- df_bins%>%select(CatchmentSize_ha_log,K600.effective) %>%
     n()
   )
 
-p1<-ggplot(data=df_bins, aes(x=Catchment_bin, y=k600_stdev)) +
+df_bins$Catchment_bin2 <- as.character(df_bins$Catchment_bin)
+df_bins$Catchment_bin3 <- gsub("]", "", df_bins$Catchment_bin2) 
+df_bins$Catchment_bin4 <- sub('.', '', df_bins$Catchment_bin3)
+df_bins[c('min_log', 'max_log')] <- str_split_fixed(df_bins$Catchment_bin4, ',', 2)
+df_bins$min_log <- as.numeric(df_bins$min_log )
+df_bins$max_log <- as.numeric(df_bins$max_log )
+
+df_bins$min <- signif(exp(df_bins$min_log),digits =2)
+df_bins$max <- signif(exp(df_bins$max_log),digits =2)
+
+df_bins$bins_true  <- paste(df_bins$min, "-", df_bins$max)
+
+df_bins$bins_true <- factor(df_bins$bins_true, levels = df_bins$bins_true[order(df_bins$min)])
+
+p1<-ggplot(data=df_bins, aes(x=bins_true, y=k600_stdev)) +
   geom_bar(stat="identity", color="black",fill="grey", width=1)+ 
-    ylab(expression(paste("stdev"))) +
-  theme_bw(base_size = 14)# +
-#   theme(axis.text.x = element_text(angle = 45)) 
+    ylab(expression(paste("standard deviation"))) + xlab("Catchment size (Hectar)") +
+  theme_bw(base_size = 16)
     
 p1
+
 
 p2<-ggplot(data=df_bins, aes(x=Catchment_bin, y=k600_mean)) +
   geom_bar(stat="identity", color="black",fill="grey", width=1) +
   geom_point(aes(x=Catchment_bin,y=k600_median),shape=23,size=4,color="black",fill="black") + 
     ylab(expression(paste("mean ",italic('k')[600]," [m ", d^-1,"]"))) +
-  theme_bw(base_size = 14) +
+  theme_bw(base_size = 16) +
   theme(axis.title.x=element_blank(),
         axis.text.x=element_blank(),
         axis.ticks.x=element_blank()) 
 p2
 
-ggarrange(p2, p1, nrow = 2, common.legend = TRUE)
+full <- ggarrange(p2, p1, nrow = 2, common.legend = TRUE)
 
 ```
 
