--- a/KriddieFolder/Synoptic_Script/SynopFigures_2024-02-10.Rmd
+++ b/KriddieFolder/Synoptic_Script/SynopFigures_2024-02-10.Rmd
@@ -28,7 +28,36 @@ library(scales)
 #new api
 register_stadiamaps("e723ef39-9560-41be-969c-36870f7b7f84", write = TRUE)
 
+library(scales)
 
+#extract hex color codes for a plot with three elements in ggplot2 
+hex1 <- hue_pal()(1)
+hex3 <- hue_pal()(3)
+hex6 <- hue_pal()(6)
+hex8 <- hue_pal()(8)
+
+#display hex color codes
+
+
+#antenas - 
+antens <- hex1[1]
+#gavilan
+gavi <- hex3[3]
+#gavilan inlet
+gavi_in <- hex6[4]
+#gavilan outlet
+gavi_out <- hex6[5]
+#gavilan trib1
+gavitrib1 <- hex8[2]
+#gavilan trib2
+gavitrib2 <- hex8[3]
+#gavilan trib3
+gavitrib3 <- hex8[4]
+#gavi tribs
+gavitribs <- hex3[2]
+
+#colmillo
+colmillo <- hex8[8]
 ```
 
 ## Description
@@ -145,7 +174,7 @@ gaviplot <- qmplot(lon_fit, lat_fit, data = df %>%filter(Wetland_3=="Gavilan Riv
   scale_color_gradient(low="blue", high="red",
                        breaks=c(log10(300),log10(1000), log10(3000), log10(10000)), labels=c("300","1,000","3,000","10,000"))+
     guides(size = "none") +
-  theme(legend.text=element_text(size=16)) + 
+  theme(legend.text=element_text(size=14)) + 
   labs(color=expression(paste(italic('p'),"CO"[2] ," [ppm]"))) +
   theme(legend.title=element_text(size=16), 
     legend.text=element_text(size=14)) 
@@ -155,8 +184,8 @@ gaviplot <- qmplot(lon_fit, lat_fit, data = df %>%filter(Wetland_3=="Gavilan Riv
 
 #annotate text 
 dat_text <- data.frame(
-  label = c("p-value = 0.0109", "p-value < .0001", 
-            "p-value = 0.0273","p-value = 0.111"),
+  label = c("p-value = 0.011", "p-value < .0001", 
+            "p-value = 0.027","p-value = 0.11"),
   Wetland_4   = c("ANTE", "Gavilan Outlet", "GAVItrib1", "GAVItrib2"),
   Wetland = c("ANTE","Gavi-mainstem","GAVItrib1","GAVItrib2"))
 
@@ -176,12 +205,15 @@ p2 <- ggplot(df%>%drop_na(Wetland)
   theme(axis.text=element_text(size=10),
   axis.title=element_text(size=18,face="bold")) +
  theme_bw() +
-  scale_color_discrete(name=NULL,labels=c("Antenas", "Gavil\u00e1n Outlet","Gavil\u00e1n Tributary 1","Gavil\u00e1n Tributary 2"))+
+  scale_color_manual(
+    name=NULL,
+    values = c(antens,gavi_out, gavitrib1,gavitrib2),
+    labels=c("Antenas", "Gavil\u00e1n Outlet","Gavil\u00e1n Tributary 1","Gavil\u00e1n Tributary 2"))+
   scale_y_continuous(breaks=c(log10(300),log10(1000), log10(3000), log10(10000)), labels=c("300","1,000","3,000","10,000")) +
   theme(panel.spacing = unit(.05, "lines"),
         panel.border = element_rect(color = "black", fill = NA, linewidth = 1), 
   strip.background = element_rect(color = "black", linewidth = 1))+
-  theme(legend.text=element_text(size=16),
+  theme(legend.text=element_text(size=14),
         legend.key.size = unit(1, 'cm')) +
   theme(axis.title=element_text(size=16),
          axis.text=element_text(size=14))+ 
@@ -192,9 +224,9 @@ p2 <- ggplot(df%>%drop_na(Wetland)
 
 p3 <- p2 + geom_text(
   data    = dat_text,
-  mapping = aes(x = 250, y = -Inf, label = label),
-  hjust   = -0.1,
-  vjust   = -11
+  mapping = aes(x = 400, y = log10(9000), label = label),
+#  hjust   = -0.1,
+#  vjust   = -11
 )
 
 
@@ -215,14 +247,11 @@ figure2 <- ggarrange(figure1, p3,
                   font.label = list(size = 25, color = "black", face = "bold", family = NULL, position = "top"))
 
 
-
-
-
-
-
 ```
 
 # trends in flux 
+
+#fig 3
 
 Box plots
 ```{r fig 3, echo=FALSE}
@@ -260,14 +289,17 @@ CO2 <- ggplot(df, aes(x = Wetland_5, y = log10(adjusted_ppm), fill = Wetland_5))
   geom_jitter(shape=18,position=position_jitter(0.1)) +
    stat_summary(fun = "mean", geom = "point", shape = 23, size = 3, color = "black",fill="white")+
   MyTheme +
-  scale_fill_discrete(name=NULL,labels=c("Antenas", "Colmillo","Gavil\u00e1n Inlet", "Gavil\u00e1n Outlet","Gavil\u00e1n Tributaries"))+
+  scale_fill_manual(
+    name=NULL,
+    values = c(antens,colmillo, gavi_in,gavi_out,gavitribs),
+    labels=c("Antenas", "Colmillo","Gavil\u00e1n Inlet", "Gavil\u00e1n Outlet","Gavil\u00e1n Tributaries"))+
   ylab(expression(paste(italic('p'),"CO"[2]," [ppm]"))) +
   scale_y_continuous(breaks=c(log10(300),log10(1000), log10(3000), log10(10000)), labels=c("300","1,000","3,000","10,000"))  +
-    annotate("text", x="ANTE", y= log10(18000),label="A", size = 5) +
-  annotate("text", x="COLM", y= log10(18000),label="A", size = 5) +
-  annotate("text", x="Gavilan Inlet", y= log10(18000),label="A", size = 5) +
-   annotate("text", x="Gavilan Outlet", y= log10(18000),label="AB", size = 5) +
-    annotate("text", x="GavilanTribs", y= log10(18000),label="B", size = 5) 
+    annotate("text", x="ANTE", y= log10(18000),label="A", size = 4) +
+  annotate("text", x="COLM", y= log10(18000),label="A", size = 4) +
+  annotate("text", x="Gavilan Inlet", y= log10(18000),label="A", size = 4) +
+   annotate("text", x="Gavilan Outlet", y= log10(18000),label="AB", size = 4) +
+    annotate("text", x="GavilanTribs", y= log10(18000),label="B", size = 4)
 
 
 
@@ -276,38 +308,45 @@ flux <- ggplot(df, aes(x = Wetland_5, y = Flux_ave, fill = Wetland_5)) +
   geom_jitter(shape=18,position=position_jitter(0.1)) +
    stat_summary(fun = "mean", geom = "point", shape = 23, size = 3, color = "black",fill="white")+
   MyTheme +
-  scale_fill_discrete(name=NULL,labels=c("Antenas", "Colmillo","Gavil\u00e1n Inlet", "Gavil\u00e1n Outlet","Gavil\u00e1n Tributaries")) +
+  scale_fill_manual(
+    name=NULL,
+    values = c(antens,colmillo, gavi_in,gavi_out,gavitribs),
+    labels=c("Antenas", "Colmillo","Gavil\u00e1n Inlet", "Gavil\u00e1n Outlet","Gavil\u00e1n Tributaries")) +
     ylab(expression(paste(" Evasion [",mu,"mol ", m^-2, s^-1,"]"))) +
-    annotate("text", x="ANTE", y= 5,label="A", size = 5) +
-    annotate("text", x="COLM", y= 5,label="B", size = 5) +
-  annotate("text", x="Gavilan Inlet", y= 5,label="AB", size = 5) +
-  annotate("text", x="Gavilan Outlet", y= 5,label="AC", size = 5) +
-    annotate("text", x="GavilanTribs", y= 5,label="BC", size = 5) 
+    annotate("text", x="ANTE", y= 5,label="A", size = 4) +
+    annotate("text", x="COLM", y= 5,label="B", size = 4) +
+  annotate("text", x="Gavilan Inlet", y= 5,label="AB", size = 4) +
+  annotate("text", x="Gavilan Outlet", y= 5,label="AC", size = 4) +
+    annotate("text", x="GavilanTribs", y= 5,label="BC", size = 4) 
 
 
 k600 <- ggplot(df%>%filter(K600.effective>-30)
                , aes(x = Wetland_5, y = K600.effective, fill = Wetland_5)) + 
   geom_boxplot() +
   geom_jitter(shape=18,position=position_jitter(0.1)) +
-   stat_summary(fun = "mean", geom = "point", shape = 23, size = 3, color = "black",fill="white")+
-  scale_fill_discrete(name=NULL,labels=c("Antenas", "Colmillo","Gavil\u00e1n Inlet", "Gavil\u00e1n Outlet","Gavil\u00e1n Tributaries"))+
+   stat_summary(fun = "mean", geom = "point", shape = 23, size = 3, color = "black",fill="white") +
+  scale_fill_manual(
+    name=NULL,
+    values = c(antens,colmillo, gavi_in,gavi_out,gavitribs),
+    labels=c("Antenas", "Colmillo","Gavil\u00e1n Inlet", "Gavil\u00e1n Outlet","Gavil\u00e1n Tributaries"))+
   MyTheme +
     ylab(expression(paste(italic('k')[600]," [m ", d^-1,"]"))) +
-  annotate("text", x="ANTE", y= 155,label="A", size = 5) +
-  annotate("text", x="COLM", y= 155,label="B", size = 5) +
-  annotate("text", x="Gavilan Inlet", y= 155,label="A", size = 5) +
-  annotate("text", x="Gavilan Outlet", y= 155,label="A", size = 5) +
-  annotate("text", x="GavilanTribs", y= 155,label="A", size = 5)
+  annotate("text", x="ANTE", y= 155,label="A", size = 4) +
+  annotate("text", x="COLM", y= 155,label="B", size = 4) +
+  annotate("text", x="Gavilan Inlet", y= 155,label="A", size = 4) +
+  annotate("text", x="Gavilan Outlet", y= 155,label="A", size = 4) +
+  annotate("text", x="GavilanTribs", y= 155,label="A", size = 4)
 
 require(grid)  
 
 
 
 figure <- ggarrange(CO2 , flux,  k600,
-                    labels = c("A","B","C"),
+                  #  labels = c("A","B","C"),
                     ncol = 1, nrow = 3,
                     common.legend = TRUE, legend = "right",
                     align = "hv", 
+                  #  hjust   = -0.5,
                     font.label = list(size = 20, color = "black", face = "bold", family = NULL, position = "top"))
 
 figure
@@ -317,13 +356,13 @@ figure
 ```
 
 
-#fig 3
+#fig 4
 
 for < 12.5 hectars, watershed size is not significant, co2 is significant
 r2 = 0.5247, pvalue =2.43e-07
 for > 20 ha, co2 is not significant, but watershed size is. pvalue = 0.00395 r2 = 0.1057
 
-```{r fig 3, echo=FALSE}
+```{r fig 4, echo=FALSE}
 
 df_sats <- df
 df_sats$co2_scale <-scale(df_sats$adjusted_ppm)
@@ -368,10 +407,12 @@ A <- ggplot(df%>%filter(CatchmentSize_ha<12.5),
   xlab("CO2 ppm") + 
   ylab(expression(paste("CO"[2]," Flux [",mu,"mol ", m^-2, s^-1,"]"))) +
   labs(linetype="LEGEND", color="LEGEND") +
-  scale_fill_manual(name="Stream Reach",labels=c("Antenas", "Gavil\u00e1n Tributary 1","Gavil\u00e1n Tributary 3"), values = c(hex(1)[1], "yellow1", hex(7)[6])) +
+  scale_fill_manual(name="Stream Reach",labels=c("Antenas", "Gavil\u00e1n Tributary 1","Gavil\u00e1n Tributary 3"), values = c(antens, gavitrib1, gavitrib3)) +
    scale_x_continuous(breaks=c(log10(300),log10(1000), log10(3000), log10(10000)), labels=c("300","1,000","3,000","10,000")) + 
-  annotate("text", x = log10(7000), y = 2.5, label  = expression("p-value < .0001\n", r^2 ~ "=" ~ .52), size = 4) +
+  annotate("text", x = log10(6000), y = 2.2, label  = expression("p-value < .0001\n", r^2 ~ "=" ~ .52), size = 4) +
    theme_bw()  + MyTheme 
+
+
 
 B <- ggplot(df_sats #%>%filter(Flux_ave>.05)
             %>%filter(CatchmentSize_ha>20)
@@ -384,14 +425,16 @@ B <- ggplot(df_sats #%>%filter(Flux_ave>.05)
   xlab("Catchment Size [ha]") + 
   ylab(expression(paste("CO"[2]," Flux [",mu,"mol ", m^-2, s^-1,"]"))) + 
   labs(linetype="LEGEND", color="LEGEND") +
-  scale_fill_manual(name="Stream Reach",labels=c( "Colmillo","Gavil\u00e1n","Gavil\u00e1n Tributary 2"),values = c(hex(3)[2], hex(3)[3],"darkorange")) +
-  annotate("text", x = 180, y = 3.5, label  = expression("p-value = .0004\n", r^2 ~ "=" ~ .11), size = 4) +
+  scale_fill_manual(
+    name="Stream Reach",
+    labels=c( "Colmillo","Gavil\u00e1n","Gavil\u00e1n Tributary 2"),values = c(colmillo, gavi,gavitrib2))+
+  annotate("text", x = 180, y = 3.4, label  = expression("p-value = .0004\n", r^2 ~ "=" ~ .11), size = 4) +
    theme_bw()  + MyTheme
 
 
 
 figure <- ggarrange(A , B,  
-                    labels = c("A","B"),
+                #    labels = c("A","B"),
                     ncol = 1, nrow = 2,
                     #common.legend = TRUE, 
                     legend = "right",
@@ -399,7 +442,7 @@ figure <- ggarrange(A , B,
                     font.label = list(size = 25, color = "black", face = "bold", family = NULL, position = "top"))
 
 figure
-ggsave("controls_2.png", plot = figure, device = NULL, path = NULL,
+ggsave("fig5.png", plot = figure, device = NULL, path = NULL,
        scale = 1, width = 20, height = 20, dpi = 360, limitsize = TRUE,
        units = c("cm"))
 
@@ -680,20 +723,17 @@ MyTheme <-  theme_bw() +
   theme(aspect.ratio=1)
 
 
-bball <- ggplot(df_test%>%filter(Wetland_4 != "Gavilan Outlet")%>%filter(Wetland_4 != "Gavilan Inlet")
-                , 
+bball <- ggplot(df_test%>%filter(Wetland_4 != "Gavilan Outlet")%>%filter(Wetland_4 != "Gavilan Inlet"),
                 aes(x=dist, y=Totalflux_umolpers, group=Wetland_4)) +
-  geom_line(aes(#linetype=Wetland,
-    color=Wetland),
-    size=3) +
-  geom_point(aes(shape = shape,fill=Wetland), size=2)+
-    ylab(expression(paste("Cumulative CO"[2]," Flux [",mu,"mol ", s^-1,"]"))) + 
-  xlab("Distance [m]") +
- scale_color_manual(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan-mainstem","Tributary 1","Tributary 2"), values=c("#F8766D", "#C49A00", "#53B400","#00A9FF", "#C77CFF")) +
+  geom_line(aes(color=Wetland), size=3) +
+  geom_point(aes(shape = shape,fill=Wetland), size=2) +
+  ylab(expression(paste(""))) +
+  xlab("") +
+  scale_color_manual(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan-mainstem","Tributary 1","Tributary 2"), values=c(antens, colmillo, gavi,gavitrib1, gavitrib2)) +
+  scale_fill_manual(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan-mainstem","Tributary 1","Tributary 2"), values=c(antens, colmillo, gavi,gavitrib1, gavitrib2)) +
   scale_linetype_discrete(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan-mainstem","Tributary 1","Tributary 2")) +
-  scale_fill_manual(values=c("#F8766D", "#C49A00", "#53B400","#00A9FF" ,"#C77CFF")) +
   scale_shape_manual(name="Sample Point", labels=c("",""), values = 21) +
-  guides(fill=FALSE) +
+  guides(fill=FALSE,color=FALSE,shape=FALSE) +
   MyTheme
 
 
@@ -703,22 +743,19 @@ bball
 #"#F8766D" "#C49A00" "#53B400" "#00C094" "#00B6EB" "#A58AFF" "#FB61D7"
 
 #zoom in
-bball_zoom <- ggplot(df_test%>%filter(Wetland_4 != "Gavi-mainstem")
-       , aes(x=dist, y=Totalflux_umolpers, group=Wetland_4)) +
-  geom_line(aes(#linetype=Wetland_4,
-    color=Wetland_4),
-    size=3) +
+bball_zoom <- ggplot(df_test%>%filter(Wetland_4 != "Gavi-mainstem"), 
+                     aes(x=dist, y=Totalflux_umolpers, group=Wetland_4)) +
+  geom_line(aes(color=Wetland_4), size=3) +
   geom_point(aes(shape = shape,fill=Wetland_4), size=2)+
     ylab(expression(paste("Cumulative CO"[2]," Flux [",mu,"mol ", s^-1,"]"))) + 
   xlab("Distance [m]") +
-  
-  scale_color_manual(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2"), values=c("#F8766D", "#C49A00", "#53B400", "#00C094","#00A9FF", "#C77CFF")) +
-  
-  scale_linetype_discrete(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2")) +
-
+  scale_color_manual(name="Stream Reach",
+                     labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2"), 
+                     values=c(antens, colmillo, gavi_in,gavi_out,gavitrib1, gavitrib2)) +
+  scale_linetype_discrete(name="Stream Reach",
+                          labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2")) +
   scale_shape_manual(name="Sample Point", labels=c("",""), values = 21) +
-
-  scale_fill_manual(values=c("#F8766D", "#C49A00", "#53B400", "#00C094","#00A9FF", "#C77CFF")) +
+  scale_fill_manual(values=c(antens, colmillo, gavi_in,gavi_out,gavitrib1, gavitrib2)) +
     guides(fill=FALSE) +
   xlim(-10, 350) +
   ylim(-20, 300) +
@@ -733,27 +770,33 @@ that worked! now I'm going to fiddle around to prefct it more
 
 ```{r bball fig 2, echo=FALSE}
 
-bball_annotate <- bball + annotate("rect", xmin = -10, xmax = 350, ymin = -20, ymax = 300,
+bball_annotate <- bball + 
+  annotate("rect", xmin = -10, xmax = 350, ymin = -20, ymax = 300,
   colour = "blue",alpha = .2)
 
 
 #zoom in
-bball_zoom_nolegend <- ggplot(df_test%>%filter(Wetland_4 != "Gavi-mainstem")
+bball_zoom_nolegend <- 
+  ggplot(df_test%>%filter(Wetland_4 != "Gavi-mainstem")
        , aes(x=dist, y=Totalflux_umolpers, group=Wetland_4)) +
   geom_line(aes(#linetype=Wetland_4,
     color=Wetland_4),
     size=3) +
-  geom_point(aes(shape = shape,fill=Wetland_4), size=2)+
-    ylab(expression(paste("Cumulative CO"[2]," Flux [",mu,"mol ", s^-1,"]"))) + 
+  geom_point(aes(shape = shape,fill=Wetland_4), size=2) +
+  ylab(expression(paste("Cumulative CO"[2]," Flux [",mu,"mol ", s^-1,"]"))) + 
   xlab("Distance [m]") +
-  
-  scale_color_manual(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2"), values=c("#F8766D", "#C49A00", "#53B400", "#00C094","#00A9FF", "#C77CFF")) +
-  
-  scale_linetype_discrete(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2")) +
-
-  scale_shape_manual(name="Sample Point", labels=c("",""), values = 21) +
-
-  scale_fill_manual(values=c("#F8766D", "#C49A00", "#53B400", "#00C094","#00A9FF", "#C77CFF")) +
+  scale_color_manual(
+    name="Stream Reach",
+    labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2"),
+    values=c(antens, colmillo, gavi_in,gavi_out,gavitrib1, gavitrib2)) +
+  scale_linetype_discrete(
+    name="Stream Reach",
+    labels=c("Antenas", "Colmillo","Gavilan Inlet","Gavilan Outlet","Tributary 1","Tributary 2")) +
+  scale_shape_manual(
+    name="Sample Point", 
+    labels=c("",""), values = 21) +
+  scale_fill_manual(
+values=c(antens, colmillo, gavi_in,gavi_out,gavitrib1, gavitrib2)) +
     guides(fill=FALSE) +
   xlim(-10, 350) +
   ylim(-20, 300) +
@@ -771,9 +814,12 @@ bball_zoom_nolegend
 
 # Extract the legend. Returns a gtable
 leg <- get_legend(bball)
+leg2 <- get_legend(bball_zoom)
+
 
 # Convert to a ggplot and print
 as_ggplot(leg)
+as_ggplot(leg2)
 
 
 ggsave("testing123.png",plot = bball, dpi = 360, units = "cm")
